[package]
name = "pcu_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono", "low-power"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "c3907672" }

static_cell = "1.3.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "0.2.7"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures-util = { version = "0.3.31", default-features = false }
heapless = { version = "0.8.0", default-features = false }
assign-resources = {git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a"}
libm = "0.2.11"
bitvec = {version = "1.0.1", default-features = false}

[profile.release]
debug = 2
test = false
